# emlv1-practice

./: .gitignore  README.md
main/: CMakeLists.txt  main.c
process/board/controller/: board_command.c  board_command.h  board_command_call_table.h  board_command_call_table_mapper.h  board_command_handler.c  board_command_handler.h
process/board/entity/: board.h  post.h
process/board/repository/: board_repository.c  board_repository_call_table.h  board_repository_call_table_mapper.h  board_repository_handler.c  board_repository_handler.h
process/board/service/: board_service.c  board_service_call_table.h  board_service_call_table_mapper.h  board_service_handler.c  board_service_handler.h
process/comment/controller/: comment_command.c  comment_command.h  comment_command_call_table.h  comment_command_call_table_mapper.h  comment_command_handler.c  comment_command_handler.h
process/comment/entity/: comment.h
process/comment/repository/: comment_repository.c  comment_repository_call_table.h  comment_repository_call_table_mapper.h  comment_repository_handler.c  comment_repository_handler.h
process/comment/service/: comment_service.c  comment_service.h  comment_service_call_table.h  comment_service_call_table_mapper.h  comment_service_handler.c  comment_service_handler.h
process/post/controller/: post_command.c  post_command.h  post_command_call_table.h  post_command_call_table_mapper.h  post_command_handler.c  post_command_handler.h
process/post/entity/: post.c  post.h
process/post/repository/: post_repository.c  post_repository.h  post_repository_handler.c  (+3 more)
(+20 files in other folders)
